--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
             </div>
             <div class="general">Preview</div>
             <div class="textarea-box">
-              <textarea rows="7" cols="65"></textarea>
+              <textarea rows="8" cols="47" class="textarea"></textarea>
             </div>
           </div>
           <div class="footer-btn">
             <div class="left-btn-grp">
-              <button type="button" class="btn">Tabs</button>
+              <button type="button" class="btn"><u>T</u>abs...</button>
             </div>
             <div class="right-btn-grp">
               <button type="button" class="btn">OK</button>
