--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="body-container">
         <div class="tab-section">
           <menu role="tablist" aria-label="Sample Tabs">
-            <button role="tab" aria-selected="true" aria-controls="tab-A">Indents and Spacing</button>
+            <button role="tab" aria-selected="true" aria-controls="tab-A"><u>I</u>ndents and Spacing</button>
             <button role="tab" aria-controls="tab-B">Line and Page Breaks</button>
 
 
@@ -29,7 +29,9 @@
           <div class="article">
             <div class="general">General</div>
             <div class="alingment">
-              <label>Ali<u>g</u>nment:</label>
+              <label>
+                <p>Ali<u>g</u>nment:</p>
+                </label>
               <select accesskey="f" name="alignment" id="functions" class="alignment-option input-style">
                 <option value="Centered" aria-placeholder="Centered">Centered</option>
                 <option value="2">left</option>
@@ -77,7 +79,7 @@
                 </div>
               </div>
             </div>
-            <div class="Indention general">Indention</div>
+            <div class="Indention general">Spacing</div>
             <div>
               <div class="spacing-box">
                 <div class="left-box">
