--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,23 +21,22 @@
         <div class="tab-section">
           <menu role="tablist" aria-label="Sample Tabs">
             <button role="tab" aria-selected="true" aria-controls="tab-A"><u>I</u>ndents and Spacing</button>
-            <button role="tab" aria-controls="tab-B">Line and Page Breaks</button>
+            <button role="tab" aria-controls="tab-B">Line and <u>P</u>age Breaks</button>
 
 
           </menu>
           <div class="article">
             <div class="general">General</div>
             <div class="alingment">
-              <label>
-                <p>Ali<u>g</u>nment:</p>
+              <label>Ali<u>g</u>nment:</p>
                 </label>
-              <select accesskey="f" name="alignment" id="functions" class="alignment-option input-style">
+              <select accesskey="a" name="alignment" id="functions" class="alignment-option input-style">
                 <option value="Centered" aria-placeholder="Centered">Centered</option>
                 <option value="2">left</option>
                 <option value="3">right</option>
               </select>
               <label><u>O</u>utline:</label>
-              <select accesskey="f" name="Outline" id="Outline" class="outline-option input-style">
+              <select accesskey="o" name="Outline" id="Outline" class="outline-option input-style">
                 <option value="Body Text">Body Text</option>
                 <option value="Level1">Level1</option>
                 <option value="Level2">Level2</option>
@@ -52,12 +50,12 @@
                 <div class="left-input "><label for="left">
                     <p><u>L</u>eft:</p>
                   </label>
-                  <input type="number" class="num-input" id="left" placeholder='0"' name="left" min="0" max="5">
+                  <input accesskey="l" type="number" class="num-input" id="left" placeholder='0"' name="left" min="0" max="5">
                 </div>
                 <div class="right-input"><label for="right">
                     <p><u>R</u>ight:</p>
                   </label>
-                  <input type="number" id="left" class="num-input" placeholder='0"'name="left" min="0" max="5">
+                  <input accesskey="r" type="number" id="left" class="num-input" placeholder='0"'name="left" min="0" max="5">
                 </div>
               </div>
               <div class="right-box">
@@ -65,7 +63,7 @@
                   <label for="special">
                     <p><u>S</u>pecial:</p>
                   </label>
-                  <select accesskey="f" name="special" id="special" class="special-option input-style">
+                  <select accesskey="s" name="special" id="special" class="special-option input-style">
                     <option value="1">(none)</option>
                     <option value="2">one value</option>
                     <option value="3">Two value</option>
@@ -75,7 +73,7 @@
                   <label for="By">
                     <p><u>B</u>y:</p>
                   </label>
-                  <input type="number" id="By" class="num-input" name="By" min="0" max="5">
+                  <input accesskey="b" type="number" id="By" class="num-input" name="By" min="0" max="5">
                 </div>
               </div>
             </div>
@@ -86,12 +84,12 @@
                   <div class="left-input"><label for="left">
                       <p><u>B</u>efore:</p>
                     </label>
-                    <input type="number" class="num-input" id="left" name="left" min="0" max="5" placeholder="18pt">
+                    <input accesskey="e" type="number" class="num-input" id="left" name="left" min="0" max="5" placeholder="18pt">
                   </div>
                   <div class="right-input"><label for="right">
                       <p><u>A</u>fter:</p>
                     </label>
-                    <input type="number" id="left" class="num-input" name="left" min="0" max="5" placeholder='0pt'>
+                    <input accesskey="f" type="number" id="left" class="num-input" name="left" min="0" max="5" placeholder='0pt'>
                   </div>
                 </div>
                 <div class="right-box">
@@ -99,17 +97,17 @@
                     <label for="special">
                       <p>Li<u>n</u>e spacing:</p>
                     </label>
-                    <select accesskey="f" name="Line-spacing" id="Line-spacing" class="Line-option input-style">
+                    <select accesskey="i" name="Line-spacing" id="Line-spacing" class="Line-option input-style">
                       <option value="1">Single</option>
                       <option value="2">one value</option>
                       <option value="3">Two value</option>
                     </select>
                   </div>
                   <div class="by-input">
-                    <label for="By">
+                    <label for="At">
                       <p><u>A</u>t:</p>
                     </label>
-                    <input type="number" id="By" class="num-input" name="By" min="0" max="5">
+                    <input accesskey="at" type="number" id="By" class="num-input" name="By" min="0" max="5">
                   </div>
                 </div>
               </div>
@@ -120,16 +118,16 @@
             </div>
             <div class="general">Preview</div>
             <div class="textarea-box">
-              <textarea rows="8" cols="47" class="textarea"></textarea>
+              <textarea accesskey="x" rows="8" cols="47" class="textarea"></textarea>
             </div>
           </div>
           <div class="footer-btn">
             <div class="left-btn-grp">
-              <button type="button" class="btn"><u>T</u>abs...</button>
+              <button accesskey="t" type="button" class="btn"><u>T</u>abs...</button>
             </div>
             <div class="right-btn-grp">
-              <button type="button" class="btn">OK</button>
-              <button type="button" class="btn">Cancel</button>
+              <button accesskey="k" type="button" class="btn">OK</button>
+              <button  accesskey="c" type="button" class="btn">Cancel</button>
             </div>
 
           </div>
