--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <label for="At">
                       <p><u>A</u>t:</p>
                     </label>
-                    <input accesskey="at" type="number" id="By" class="num-input" name="By" min="0" max="5">
+                    <input accesskey="h" type="number" id="By" class="num-input" name="By" min="0" max="5">
                   </div>
                 </div>
               </div>
