--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="tab-section">
           <menu role="tablist" aria-label="Sample Tabs">
             <button role="tab" aria-selected="true" aria-controls="tab-A"><u>I</u>ndents and Spacing</button>
-            <button role="tab" aria-controls="tab-B">Line and <u>P</u>age Breaks</button>
+            <button role="tab" aria-controls="tab-B" id="line">Line and <u>P</u>age Breaks</button>
 
 
           </menu>
